[package]
name = "traffic_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pcap = { version = "1", features = ["capture-stream"] }
chrono = { version = "0.4.34" }
